dataset/local/tf_rds_auto_minor_upgrade/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_db_instance
        name: my_db
        values:
          identifier: my-db-instance
          engine: mysql
          instance_class: db.t3.micro
          auto_minor_version_upgrade: true
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_db_instance
        name: my_db
        values:
          identifier: my-db-instance
          engine: mysql
          instance_class: db.t3.micro
          auto_minor_version_upgrade: false
